--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </body>
 </html>
-/* This is how the navigation bar is created */
+<!--This is how the bavigation bar is created-->
 <nav class="navbar">
   <div class="nav-left">
     <a href="index.html">Home</a>
