--- a/projectinfo.html
+++ b/projectinfo.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <!--This is how the bavigation bar is created-->
+   <!--This is how the navigation bar is created-->
 <nav class="navbar">
   <div class="nav-left">
     <a href="index.html">Home</a>
