--- a/projectinfo.html
+++ b/projectinfo.html
@@ -15,6 +15,6 @@
     <a href="projectinfo.html">Project info</a>
   </div>
 </nav> 
-<p>This is the first part fo a larger UCG Mart project.This demonstrates how to create a navigational bar on our website</p>
+<p>This is the first part for a larger UCG Mart project.This demonstrates how to create a navigational bar on our website</p>
 </body>
 </html>
