--- a/about.html
+++ b/about.html
@@ -15,6 +15,6 @@
     <a href="projectinfo.html">Project info</a>
   </div>
 </nav> 
-  <p>This is my place holder for my page</p>
+  <p>This is my place holder for my page.</p>
 </body>
 </html>
