--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <a href="projectinfo.html">Project info</a>
   </div>
 </nav> 
-  <p>Welcome to my shop</p>
+  <p>Welcome to my shop.</p>
 </body>
 </html>
